WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304936
Apply security-related fixes from upstream libaom
https://bugs.webkit.org/show_bug.cgi?id=304936
Summary
Apply security-related fixes from upstream libaom
youenn fablet
Reported
2026-01-05 04:51:08 PST
Cherry-pick security-related fixes from upstream libaom
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-05 04:51:20 PST
<
rdar://problem/167546061
>
youenn fablet
Comment 2
2026-01-05 04:55:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56087
EWS
Comment 3
2026-01-07 02:29:16 PST
Committed
305208@main
(eeb2b37313da): <
https://commits.webkit.org/305208@main
> Reviewed commits have been landed. Closing PR #56087 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug