Apply security-related fixes from upstream libaom rdar://167546061 https://bugs.webkit.org/show_bug.cgi?id=304936

Reviewed by Chris Dumez.

We update our libaom copy by applying some fixes from upstream libaom.
Covered by existing tests.

Canonical link: https://commits.webkit.org/305208@main